Disable date ranges unless custom radio button is selected. Moved control panel to left side to ensure that pop-up calendars are fully visible. Modified font size on control panel labels.

--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,11 @@ h1, h2, h3, h4 { font-weight: 400; }
   font-size: 12px;
 }
 
+.radio {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
 /* If not using map tiles, show a white background */
 .leaflet-container {
   background-color: white !important;
